--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,6 +16,7 @@
         placeholder="What is your name?">
     <input type="submit" value="Log In">
     </form>
+    <a href="https://nomadcoders.co">Go to courses</a>
     <script src="app.js"></script>
 </body>
 </html>
