--- a/momentum/index.html
+++ b/momentum/index.html
@@ -16,7 +16,7 @@
         placeholder="What is your name?">
     <input type="submit" value="Log In">
     </form>
-    <a href="https://nomadcoders.co">Go to courses</a>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
 </body>
-</html>
+</html>  
