--- a/momentum/index.html
+++ b/momentum/index.html
@@ -10,7 +10,7 @@
 <body>
     <form class="hidden" id="login-form">
     <input 
-        required
+        required 
         maxlength="15"
         type="text" 
         placeholder="What is your name?">
@@ -25,5 +25,6 @@
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
 </body>
 </html>  
